--- a/forever22/style.css
+++ b/forever22/style.css
@@ -5,6 +5,10 @@
 button:focus{
     outline: none;
 }
+a{
+    color: inherit;
+    text-decoration: none;
+}
 
 .top-nav-bar{
     background-color: #F9F9F9;
@@ -294,13 +298,15 @@ h5{
 
 #yellow-banner{
    font-size: 22px;
-   margin-left: 11%;
+   margin-left: 3%;
    letter-spacing: .5px;
+   font-family:  'Montserrat', sans-serif;
 }
 
 .main-block-1{
     background-color: #EC6B33;
-    width: 85%;
+    border-right: 38.2rem solid #F8DEE7;
+    width: 42.5%;
     height: 500px;
     /* top: 30%;
     left: 8%; */
@@ -310,6 +316,13 @@ h5{
     left: 8%; 
     top: 30%; 
     z-index: 0; 
+}
+.half-line{
+    background-color: #0348EB;
+    height:518px;
+    width: .2rem;
+    margin-left:100%;
+    margin-top: -3%;
 }
 
 .main-block-2{
@@ -325,7 +338,32 @@ h5{
     top: 95%; 
     z-index: 0; 
 }
-
+.main-block-2{
+    text-align: center;
+}
+#mb-2-ad{
+    background-color: #F8DEE7;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-top: 0.2%;
+    height:70px;
+    color: #0348EB;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+}
+#mb-2-ad span{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+}
+#mb-2-ad button{
+    background-color: #0348EB;
+    color: #F8DEE7;
+    letter-spacing: 5px;
+    height: 50px;
+    border: none;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
 .main-block-3{
     background-color: #F8E6E6;
     width: 85%;
